syntax = "proto3";

package rivet.backend.pkg.cloud.namespace_token_development_create;

import "resources/legacy/proto/common.proto";
import "resources/legacy/proto/backend/matchmaker.proto";

message Request {
	reserved 2;
	rivet.common.Uuid namespace_id = 1;
	string hostname = 3;
	repeated rivet.backend.matchmaker.LobbyRuntime.Port lobby_ports = 4;
}

message Response {
	string token = 1;
}
